feat: add Docker infrastructure for deployment
- backend/Dockerfile: multi-stage Maven 3.9 + JRE 21 alpine build
- frontend/Dockerfile: multi-stage Node 20 build + Nginx alpine serve
- frontend/nginx.conf: SPA routing, /api proxy to backend, gzip, asset caching
- docker-compose.yml: postgres + backend + frontend with health checks
- .env.docker.example: template for local Docker env vars
- backend/.dockerignore / frontend/.dockerignore: exclude build artifacts
- application.yml: replace hardcoded secrets with \ placeholders
- SecurityConfig: read CORS allowed origins from app.cors.allowed-origins env var
- api.ts: use VITE_API_URL env var with fallback to /api